<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>es.carm.eeutil</groupId>
    <artifactId>igae-mvn-base-wrapper</artifactId>
    <version>6.8.2-CARM.5-SNAPSHOT</version>
    <relativePath>../..</relativePath>
  </parent>
  <groupId>es.gob.ad.gestdoc</groupId>
  <artifactId>eeutil-rest-igae</artifactId>
  <packaging>war</packaging>
  <name>eeutil-igae</name>
  <description>Demo project for Spring Boot</description>
  <properties>
    <java.version>1.8</java.version>
    <jetty.port>10098</jetty.port>
    <tomcat.version>9.0.64</tomcat.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <sonar.maven.version>3.7.0.1746</sonar.maven.version>
  </properties>
  <dependencies>
    <!-- <dependency> -->
    <!-- <groupId>javax.servlet</groupId> -->
    <!-- <artifactId>javax.servlet-api</artifactId> -->
    <!-- <version>3.1.0</version> -->
    <!-- <scope>provided</scope> -->
    <!-- </dependency> -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-rest</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <!--Para configurar log4j2 descomentar estas lineas -->
      <!-- <exclusions> -->
      <!-- <exclusion> -->
      <!-- <groupId>org.springframework.boot</groupId> -->
      <!-- <artifactId>spring-boot-starter-logging</artifactId> -->
      <!-- </exclusion> -->
      <!-- </exclusions> -->
    </dependency>
    <!-- javamelody -->
    <!--        <dependency>-->
    <!--            <groupId>net.bull.javamelody</groupId>-->
    <!--            <artifactId>javamelody-spring-boot-starter</artifactId>-->
    <!--            <version>1.91.0</version>-->
    <!--        </dependency>		-->
    <!-- javamelody -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-tomcat</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <!-- <dependency> -->
    <!-- <groupId>org.springframework.boot</groupId> -->
    <!-- <artifactId>spring-boot-starter-log4j2</artifactId> -->
    <!-- </dependency> -->
    <dependency>
      <groupId>es.igae</groupId>
      <artifactId>vistaDocumentoIGAE</artifactId>
      <version>10.69.0</version>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.10</version>
    </dependency>
    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>1.13.1</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.5</version>
    </dependency>
    <dependency>
      <groupId>org.graylog2</groupId>
      <artifactId>gelfj</artifactId>
      <version>1.1.14</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>biz.paluch.logging</groupId>
      <artifactId>logstash-gelf</artifactId>
      <version>1.15.0</version>
    </dependency>
  </dependencies>
  <build>
    <finalName>eeutil-igae</finalName>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>debug</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <packaging.type>jar</packaging.type>
      </properties>
      <!-- <dependencies> -->
      <!-- <dependency> -->
      <!-- <groupId>mysql</groupId> -->
      <!-- <artifactId>mysql-connector-java</artifactId> -->
      <!-- <version>5.1.48</version> -->
      <!-- <type>jar</type> -->
      <!-- <scope>runtime</scope> -->
      <!-- </dependency> -->
      <!-- </dependencies> -->
      <build>
        <plugins>
          <plugin>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-maven-plugin</artifactId>
            <version>4.1.4</version>
            <dependencies>
              <!-- overwrite dependency on spotbugs if you want to specify the version 
								of spotbugs -->
              <dependency>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs</artifactId>
                <version>4.1.4</version>
              </dependency>
            </dependencies>
          </plugin>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <version>1.9.0</version>
            <configuration>
              <container>
                <containerId>tomcat8x</containerId>
                <timeout>300000</timeout>
                <!-- <zipUrlInstaller> -->
                <!-- <url>https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/9.0.64/tomcat-9.0.64.zip</url> -->
                <!-- </zipUrlInstaller> -->
                <artifactInstaller>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>tomcat</artifactId>
                  <version>${tomcat.version}</version>
                </artifactInstaller>
                <!-- <systemProperties> -->
                <!-- <eeutil-firma.config.path>XXXXX/local/firma</eeutil-firma.config.path> -->
                <!-- <javax.net.ssl.trustStore>XXXXX/local/keystore/minhap.jks</javax.net.ssl.trustStore> -->
                <!-- <javax.net.ssl.trustStorePassword>XXXXXX</javax.net.ssl.trustStorePassword> -->
                <!-- <local_home_app>XXXXX/local/firma</local_home_app> -->
                <!-- <modulo>EEUTIL-FIRMA</modulo> -->
                <!-- <logging.config>XXXXX/local/firma/log4j.properties</logging.config> -->
                <!-- <java.awt.headless>true</java.awt.headless> -->
                <!-- </systemProperties> -->
              </container>
              <configuration>
                <type>standalone</type>
                <home>${project.build.directory}/catalina-base</home>
                <properties>
                  <cargo.servlet.port>${jetty.port}</cargo.servlet.port>
                  <cargo.rmi.port>28214</cargo.rmi.port>
                  <cargo.tomcat.ajp.port>28014</cargo.tomcat.ajp.port>
                  <cargo.jvmargs>
										-XX:PermSize=512m
										-XX:MaxPermSize=512m
										-Xms1024m
										-Xmx1024m
										-Deeutil-igae.config.path="XXXXX/local/rest-igae"
										-Djavax.net.ssl.trustStore="XXXXX/local/keystore/minhap.jks"

										-Djavax.net.ssl.trustStorePassword="XXXXX"
										-Dlocal_home_app="XXXXX/local/rest-igae"
<!-- 										-Dlogging.config="XXXXX/local/rest-igae/logback.xml" -->
										-Dlog4j.debug
										-verbose:gc
										-XX:+PrintGCDetails
										-XX:+PrintClassHistogram
										-Djava.awt.headless=true
										<!-- -Dcom.sun.management.jmxremote.port=46924 -->
										<!-- -Dcom.sun.management.jmxremote.authenticate=false -->
										<!-- -Dcom.sun.management.jmxremote.ssl=false -->
									</cargo.jvmargs>
                  <!-- -Dcom.sun.management.jmxremote.port=46924 -Dcom.sun.management.jmxremote.authenticate=false 
										-Dcom.sun.management.jmxremote.ssl=false -->
                </properties>
              </configuration>
              <deployables>
                <deployable>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>${project.artifactId}</artifactId>
                  <type>war</type>
                  <properties>
                    <context>/eeutil-igae</context>
                  </properties>
                </deployable>
              </deployables>
            </configuration>
            <!-- <executions> -->
            <!-- <execution> -->
            <!-- <id>start</id> -->
            <!-- <phase>pre-integration-test</phase> -->
            <!-- <goals> -->
            <!-- <goal>start</goal> -->
            <!-- </goals> -->
            <!-- </execution> -->
            <!-- <execution> -->
            <!-- <id>stop</id> -->
            <!-- <phase>post-integration-test</phase> -->
            <!-- <goals> -->
            <!-- <goal>stop</goal> -->
            <!-- </goals> -->
            <!-- </execution> -->
            <!-- <execution> -->
            <!-- <id>package</id> -->
            <!-- <phase>post-integration-test</phase> -->
            <!-- <goals> -->
            <!-- <goal>package</goal> -->
            <!-- </goals> -->
            <!-- </execution> -->
            <!-- </executions> -->
          </plugin>
          <plugin>
            <groupId>org.sonarsource.scanner.maven</groupId>
            <artifactId>sonar-maven-plugin</artifactId>
            <version>3.7.0.1746</version>
          </plugin>
          <!-- <plugin> -->
          <!-- <groupId>org.jacoco</groupId> -->
          <!-- <artifactId>jacoco-maven-plugin</artifactId> -->
          <!-- <version>0.7.7.201606060606</version> -->
          <!-- <executions> -->
          <!-- <execution> -->
          <!-- <goals> -->
          <!-- <goal>prepare-agent</goal> -->
          <!-- </goals> -->
          <!-- </execution> -->
          <!-- <execution> -->
          <!-- <id>report</id> -->
          <!-- <phase>prepare-package</phase> -->
          <!-- <goals> -->
          <!-- <goal>report</goal> -->
          <!-- </goals> -->
          <!-- </execution> -->
          <!-- <execution> -->
          <!-- <id>jacoco-check</id> -->
          <!-- <goals> -->
          <!-- <goal>check</goal> -->
          <!-- </goals> -->
          <!-- <configuration> -->
          <!-- <rules> -->
          <!-- <rule> -->
          <!-- <limits> -->
          <!-- <limit> -->
          <!-- <minimum>0.9</minimum> -->
          <!-- </limit> -->
          <!-- </limits> -->
          <!-- </rule> -->
          <!-- </rules> -->
          <!-- </configuration> -->
          <!-- </execution> -->
          <!-- </executions> -->
          <!-- </plugin> -->
        </plugins>
      </build>
    </profile>
    <profile>
      <id>ddebug</id>
      <properties>
        <packaging.type>jar</packaging.type>
      </properties>
      <dependencies>
        <dependency>
          <groupId>mysql</groupId>
          <artifactId>mysql-connector-java</artifactId>
          <version>5.1.48</version>
          <type>jar</type>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-maven-plugin</artifactId>
            <version>4.1.4</version>
            <dependencies>
              <!-- overwrite dependency on spotbugs if you want to specify the version 
								of spotbugs -->
              <dependency>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs</artifactId>
                <version>4.1.4</version>
              </dependency>
            </dependencies>
          </plugin>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <version>1.9.0</version>
            <configuration>
              <container>
                <containerId>tomcat8x</containerId>
                <timeout>300000</timeout>
                <!-- <zipUrlInstaller> -->
                <!-- <url>https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/8.5.40/tomcat-8.5.40.zip</url> -->
                <!-- </zipUrlInstaller> -->
                <artifactInstaller>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>tomcat</artifactId>
                  <version>${tomcat.version}</version>
                </artifactInstaller>
                <!-- <systemProperties> -->
                <!-- <eeutil-firma.config.path>XXXXX/local/firma</eeutil-firma.config.path> -->
                <!-- <javax.net.ssl.trustStore>XXXXX/local/keystore/minhap.jks</javax.net.ssl.trustStore> -->
                <!-- <javax.net.ssl.trustStorePassword>XXXXXX</javax.net.ssl.trustStorePassword> -->
                <!-- <local_home_app>XXXXX/local/firma</local_home_app> -->
                <!-- <modulo>EEUTIL-FIRMA</modulo> -->
                <!-- <logging.config>XXXXX/local/firma/log4j.properties</logging.config> -->
                <!-- <java.awt.headless>true</java.awt.headless> -->
                <!-- </systemProperties> -->
              </container>
              <configuration>
                <type>standalone</type>
                <home>${project.build.directory}/catalina-base</home>
                <properties>
                  <cargo.servlet.port>${jetty.port}</cargo.servlet.port>
                  <cargo.rmi.port>28205</cargo.rmi.port>
                  <cargo.tomcat.ajp.port>28009</cargo.tomcat.ajp.port>
                  <cargo.jvmargs>-XX:PermSize=512m
										-XX:MaxPermSize=512m
										-Xms1024m
										-Xmx1024m
										-Deeutil-igae.config.path="XXXXX/local/rest-igae"
										-Djavax.net.ssl.trustStore="XXXXX/local/keystore/minhap.jks"
										-Djavax.net.ssl.trustStorePassword="XXXXX"
										-Dlocal_home_app="XXXXX/local/rest-igae"
<!-- 										-Dlogging.config="XXXXX/local/rest-igae/logback.xml" -->
										-Dlog4j.debug
										-verbose:gc
										-XX:+PrintGCDetails
										-XX:+PrintClassHistogram
										-Djava.awt.headless=true
										-Xdebug
										-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=29014
										-Xnoagent
										-verbose:class
									</cargo.jvmargs>
                  <!-- -Dcom.sun.management.jmxremote.port=46924 -Dcom.sun.management.jmxremote.authenticate=false 
										-Dcom.sun.management.jmxremote.ssl=false -->
                </properties>
              </configuration>
              <deployables>
                <deployable>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>${project.artifactId}</artifactId>
                  <type>war</type>
                  <properties>
                    <context>/eeutil-igae</context>
                  </properties>
                </deployable>
              </deployables>
            </configuration>
            <!-- <executions> -->
            <!-- <execution> -->
            <!-- <id>start</id> -->
            <!-- <phase>pre-integration-test</phase> -->
            <!-- <goals> -->
            <!-- <goal>start</goal> -->
            <!-- </goals> -->
            <!-- </execution> -->
            <!-- <execution> -->
            <!-- <id>stop</id> -->
            <!-- <phase>post-integration-test</phase> -->
            <!-- <goals> -->
            <!-- <goal>stop</goal> -->
            <!-- </goals> -->
            <!-- </execution> -->
            <!-- <execution> -->
            <!-- <id>package</id> -->
            <!-- <phase>post-integration-test</phase> -->
            <!-- <goals> -->
            <!-- <goal>package</goal> -->
            <!-- </goals> -->
            <!-- </execution> -->
            <!-- </executions> -->
          </plugin>
          <plugin>
            <groupId>org.sonarsource.scanner.maven</groupId>
            <artifactId>sonar-maven-plugin</artifactId>
            <version>${sonar.maven.version}</version>
          </plugin>
          <!-- 					<plugin> -->
          <!-- 						<groupId>org.jacoco</groupId> -->
          <!-- 						<artifactId>jacoco-maven-plugin</artifactId> -->
          <!-- 						<version>0.7.7.201606060606</version> -->
          <!-- 						<executions> -->
          <!-- 							<execution> -->
          <!-- 								<goals> -->
          <!-- 									<goal>prepare-agent</goal> -->
          <!-- 								</goals> -->
          <!-- 							</execution> -->
          <!-- 							<execution> -->
          <!-- 								<id>report</id> -->
          <!-- 								<phase>prepare-package</phase> -->
          <!-- 								<goals> -->
          <!-- 									<goal>report</goal> -->
          <!-- 								</goals> -->
          <!-- 							</execution> -->
          <!-- 							<execution> -->
          <!-- 								<id>jacoco-check</id> -->
          <!-- 								<goals> -->
          <!-- 									<goal>check</goal> -->
          <!-- 								</goals> -->
          <!-- 								<configuration> -->
          <!-- 									<rules> -->
          <!-- 										<rule> -->
          <!-- 											<limits> -->
          <!-- 												<limit> -->
          <!-- 													<minimum>0.9</minimum> -->
          <!-- 												</limit> -->
          <!-- 											</limits> -->
          <!-- 										</rule> -->
          <!-- 									</rules> -->
          <!-- 								</configuration> -->
          <!-- 							</execution> -->
          <!-- 						</executions> -->
          <!-- 					</plugin> -->
        </plugins>
      </build>
    </profile>
    <profile>
      <id>homovivus</id>
      <properties>
        <packaging.type>war</packaging.type>
      </properties>
    </profile>
    <profile>
      <id>redSara</id>
      <properties>
        <packaging.type>war</packaging.type>
      </properties>
    </profile>
  </profiles>
</project>
